--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@ function go(){
 	going = true;
 	$( ".log" ).html('Starting');
 	window.setInterval(function(){
+		$('.log').animate({
+  scrollTop: $('.log').get(0).scrollHeight}, 2000);
 		if(going){
 			$( ".log" ).html($( ".log" ).html() + '<br>' + 'new call');
   			$.ajax({
